--- a/Movements.csproj
+++ b/Movements.csproj
@@ -88,7 +88,9 @@
         <Compile Include="Position\Dimension3\DefaultPosition.cs" />
         <Compile Include="Position\Unity\TransformPositionSynchronizer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="WrongRealizations\Vector3PhysicPosition.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="WrongRealizations" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
